Выполнено задание 1 "Пианино".

--- a/event-object/piano/index.html
+++ b/event-object/piano/index.html
@@ -10,20 +10,21 @@
 <body>
   <ul class="set middle">
     <li class="white">
-      <audio src=""></audio>
+      <audio src=".mp3"></audio>
     </li>
     <li class="black">
-      <audio src=""></audio>
+      <audio src=".mp3"></audio>
     </li>
   	<li class="white">
-      <audio src=""></audio>
+      <audio src=".mp3"></audio>
     </li>
     <li class="black">
-      <audio src=""></audio>
+      <audio src=".mp3"></audio>
     </li>
   	<li class="white">
-      <audio src=""></audio>
+      <audio src=".mp3"></audio>
     </li>
   </ul>
+  <script src="script.js"></script>
 </body>
 </html>
