--- a/event-object/skateboard-gallery/index.html
+++ b/event-object/skateboard-gallery/index.html
@@ -33,5 +33,6 @@
       <img src="images/thumb/07.jpg" title="EGGBEATER">
     </a>
   </nav>
+  <script src="script.js"></script>
 </body>
 </html>
